2015-10-17  Wenson Hsieh  <wenson_hsieh@apple.com>

        Extend fast-clicking behavior to trigger on elements that have negligible zoom
        https://bugs.webkit.org/show_bug.cgi?id=150248
        <rdar://problem/23140069>

        Reviewed by Simon Fraser.

        Currently, fast-clicking only triggers on pages that have unscalable viewports. To allow more websites to benefit from fast-clicking
        behavior, we generalize fast-clicking to also occur when tapping on elements for which double-tap-to-zoom would zoom the element in
        or out by an insignificant amount. We define an insignificant amount of zoom to mean that zooming would increase the viewport scale
        by less than a configurable threshold, or decrease the viewport scale by more than a configurable threshold. We accomplish this by
        temporarily disabling the double tap gesture recognizer for the duration of the tap. This patch refactors some logic used to compute
        zoomed viewports to make it possible to predict the change in viewport scale when double tapping to zoom. See the changes in
        SmartMagnificationController and ViewGestureGeometryCollector for more details.

        There are no new tests, since this patch does not change existing behavior. Instead, this patch adds the machinery needed for zoom-
        dependent fast-clicking: by setting the preferences WebKitFastClickingEnabled and WebKitFastClickZoomThreshold, we will be able to tweak
        the behavior dynamically.

        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _didCommitLayerTree:]):
        (-[WKWebView _contentZoomScale]):
        (-[WKWebView _targetContentZoomScaleForRect:currentScale:fitEntireRect:minimumScale:maximumScale:]):
        (-[WKWebView _zoomToRect:withOrigin:fitEntireRect:minimumScale:maximumScale:minimumScrollDistance:]):
        (-[WKWebView _viewportIsUserScalable]):
        * UIProcess/API/Cocoa/WKWebViewInternal.h: